--- a/order-service/order-data/pom.xml
+++ b/order-service/order-data/pom.xml
@@ -16,11 +16,11 @@
     <dependencies>
         <dependency>
             <groupId>com.order.system</groupId>
-            <artifactId>order-domain-application-service</artifactId>
+            <artifactId>payment-application-service</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.order.system</groupId>
-            <artifactId>order-common-domain</artifactId>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -29,6 +29,14 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.order.system</groupId>
+            <artifactId>order-domain-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.order.system</groupId>
+            <artifactId>order-domain-application-service</artifactId>
         </dependency>
     </dependencies>
 
