--- a/order-infrastructure/docker-compose/kafka_cluster.yml
+++ b/order-infrastructure/docker-compose/kafka_cluster.yml
@@ -31,7 +31,7 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_COMPRESSION_TYPE: producer
     volumes:
-      - "./volume_order_data/kafka/broker-1:/var/lib/kafka/data"
+      - "./volumes/kafka/broker-1:/var/lib/kafka/data"
     networks:
       - ${GLOBAL_NETWORK:-kafka}
   kafka-broker-2:
@@ -48,7 +48,7 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_COMPRESSION_TYPE: producer
     volumes:
-      - "./volume_order_data/kafka/broker-2:/var/lib/kafka/data"
+      - "./volumes/kafka/broker-2:/var/lib/kafka/data"
     networks:
       - ${GLOBAL_NETWORK:-kafka}
   kafka-broker-3:
@@ -65,8 +65,7 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
       KAFKA_COMPRESSION_TYPE: producer
     volumes:
-      - ".backup/volumes/zookeeper/data:/var/lib/zookeeper/data"
-      - ".backup/volumes/zookeeper/transactions:/var/lib/zookeeper/log"
+      - "./volumes/kafka/broker-3:/var/lib/kafka/data"
     networks:
       - ${GLOBAL_NETWORK:-kafka}
   kafka-manager:
