--- a/order-service/order-container/src/main/resources/application.yml
+++ b/order-service/order-container/src/main/resources/application.yml
@@ -8,8 +8,8 @@ logging:
 order-service:
   payment-request-topic-name: payment-request
   payment-response-topic-name: payment-response
-  restaurant-approval-request-topic-name: restaurant-approval-request
-  restaurant-approval-response-topic-name: restaurant-approval-response
+  stock-approval-request-topic-name: stock-approval-request
+  stock-approval-response-topic-name: stock-approval-response
 
 spring:
   jpa:
@@ -50,7 +50,7 @@ kafka-consumer-config:
   key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
   value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
   payment-consumer-group-id: payment-topic-consumer
-  restaurant-approval-consumer-group-id: restaurant-approval-topic-consumer
+  stock-approval-consumer-group-id: stock-approval-topic-consumer
   auto-offset-reset: latest
   specific-avro-reader-key: specific.avro.reader
   specific-avro-reader: true
