--- a/stock-service/stock-container/src/main/resources/application.yml
+++ b/stock-service/stock-container/src/main/resources/application.yml
@@ -5,9 +5,9 @@ logging:
   level:
     com.order.system: DEBUG
 
-restaurant-service:
-  restaurant-approval-request-topic-name: restaurant-approval-request
-  restaurant-approval-response-topic-name: restaurant-approval-response
+stock-service:
+  stock-approval-request-topic-name: stock-approval-request
+  stock-approval-response-topic-name: stock-approval-response
 
 spring:
   jpa:
@@ -49,7 +49,7 @@ kafka-consumer-config:
   key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
   value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
   payment-consumer-group-id: payment-topic-consumer
-  restaurant-approval-consumer-group-id: restaurant-approval-topic-consumer
+  stock-approval-consumer-group-id: stock-approval-topic-consumer
   auto-offset-reset: earliest
   specific-avro-reader-key: specific.avro.reader
   specific-avro-reader: true
