--- a/stock-service/stock-container/src/main/resources/application.yml
+++ b/stock-service/stock-container/src/main/resources/application.yml
@@ -49,8 +49,8 @@ kafka-consumer-config:
   key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
   value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
   payment-consumer-group-id: payment-topic-consumer
+  auto-offset-reset: latest
   stock-approval-consumer-group-id: stock-approval-topic-consumer
-  auto-offset-reset: earliest
   specific-avro-reader-key: specific.avro.reader
   specific-avro-reader: true
   batch-listener: true
