--- a/order-service/order-container/src/main/resources/application.yml
+++ b/order-service/order-container/src/main/resources/application.yml
@@ -25,8 +25,13 @@ spring:
     password: 1234
     driver-class-name: org.postgresql.Driver
     platform: postgres
-    schema: classpath:init-schema.sql
     initialization-mode: always
+
+  sql:
+    init:
+      mode: always
+      schema-locations: classpath:init-schema.sql
+      data-locations: classpath:init-data.sql
 
 kafka-config:
   bootstrap-servers: localhost:19092, localhost:29092, localhost:39092
