--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,11 @@
                 <artifactId>postgresql</artifactId>
                 <version>42.7.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jdbc</artifactId>
+                <version>3.4.1</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <dependencies>
