--- a/order-infrastructure/docker-compose/zookeeper.yml
+++ b/order-infrastructure/docker-compose/zookeeper.yml
@@ -13,7 +13,7 @@ services:
       ZOOKEEPER_SERVERS: zookeeper:2888:3888
       KAFKA_OPTS: "-Dzookeeper.4lw.commands.whitelist=ruok"
     volumes:
-      - "./volumes/zookeeper/data:/var/lib/zookeeper/data"
-      - "./volumes/zookeeper/transactions:/var/lib/zookeeper/log"
+      - ".data/volumes/zookeeper/data:/var/lib/zookeeper/data"
+      - ".data/volumes/zookeeper/transactions:/var/lib/zookeeper/log"
     networks:
       - ${GLOBAL_NETWORK:-kafka}
