--- a/order-service/order-container/pom.xml
+++ b/order-service/order-container/pom.xml
@@ -17,6 +17,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.order.system</groupId>
             <artifactId>order-domain-core</artifactId>
         </dependency>
